--- a/05/package.json
+++ b/05/package.json
@@ -16,6 +16,7 @@
     "browser-sync": "^2.26.3",
     "concurrently": "^4.0.1",
     "pug-cli": "^1.0.0-alpha6",
+    "regex": "^0.1.1",
     "rimraf": "^2.6.2"
   }
 }
