add index style npm

--- a/09/package.json
+++ b/09/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "browser-sync": "^2.26.3"
+    "browser-sync": "^2.26.3",
+    "reset-css": "^4.0.1"
   }
 }
