--- a/08/package.json
+++ b/08/package.json
@@ -1,7 +1,6 @@
 {
   "name": "08",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "browser-sync start -s -f ./"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "browser-sync": "^2.26.3"
-  }
+  },
+  "description": ""
 }
